--- a/brandshop/style.css
+++ b/brandshop/style.css
@@ -35,3 +35,12 @@ header input {
     padding: 5px 10px;
     border: none;
 }
+videoframe {
+    overflow: hidden;
+    margin-bottom: 3rem;
+    max-height: 50vh;
+}
+
+video {
+    width: 100%;
+}
